# src/category/controllers/admin-category.controller.ts
@@ -1,0 +1,62 @@
+import { Body, Controller, Delete, Get, HttpCode, NotFoundException, Param, ParseIntPipe, Patch, Post, Query, UseGuards } from "@nestjs/common";
+import { CategoryService } from "../category.service";
+import { ApiBearerAuth, ApiCreatedResponse, ApiNoContentResponse, ApiOkResponse } from "@nestjs/swagger";
+import { GrpcAuthGuard } from "src/common/auth";
+import { CreateCategoryDto } from "../dto/create.category.dto";
+import { UpdateCategoryDto } from "../dto/update.category.dto";
+import { AdminCategoryDto } from "../dto/admin/admin-category.dto";
+import { CategoryPaginationDto } from "../dto/category.pagination.dto";
+import { FilterCategoriesDto } from "../dto/filter.categories.dto";
+import { CategoryDto } from "../dto/category.dto";
+import { AdminCategoryPaginationDto } from "../dto/admin/admin-category.pagination.dto";
+
+@Controller('api/admin/categories')
+export class AdminCategoryController {
+
+    constructor(private readonly categoryService: CategoryService) {}
+
+    @Get()
+    @ApiBearerAuth()
+    @UseGuards(GrpcAuthGuard)
+    @ApiOkResponse({ type: AdminCategoryPaginationDto })
+    async index(@Query() query: FilterCategoriesDto): Promise<AdminCategoryPaginationDto> {
+        return this.categoryService.getAllAdmin(query);
+    }
+
+    @Get(':id')
+    @ApiOkResponse({ type: AdminCategoryDto })
+    async getItemById(@Param('id', ParseIntPipe) id: number): Promise<AdminCategoryDto> {
+
+        const category = await this.categoryService.getItemByIdAdmin(id);
+
+        if(!category)
+            throw new NotFoundException(`Category ${id} not found`);
+
+        return category;
+    }
+
+    @Post()
+    @ApiBearerAuth()
+    @UseGuards(GrpcAuthGuard)
+    @ApiCreatedResponse({ type: AdminCategoryDto })
+    async create(@Body() payload: CreateCategoryDto): Promise<AdminCategoryDto> {
+        return this.categoryService.create(payload);
+    }
+
+    @Patch(':id')
+    @ApiBearerAuth()
+    @UseGuards(GrpcAuthGuard)
+    @ApiOkResponse({ type: AdminCategoryDto })
+    async update(@Param('id', ParseIntPipe) id: number, @Body() payload: UpdateCategoryDto): Promise<AdminCategoryDto> {
+        return this.categoryService.update(id, payload);
+    }
+
+    @Delete(':id')
+    @HttpCode(204)
+    @ApiBearerAuth()
+    @UseGuards(GrpcAuthGuard)
+    @ApiNoContentResponse()
+    async remove(@Param('id', ParseIntPipe) id: number): Promise<void> {
+        return this.categoryService.remove(id);
+    }
+}
